<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <TextView
      android:id="@+id/create_project_page_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="gone"
      android:text="@string/create_new_project_title"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintLeft_toLeftOf="parent" />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/project_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/project_name_field_label"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      app:layout_constraintTop_toBottomOf="@id/create_project_page_title"
      app:layout_constraintLeft_toLeftOf="parent" >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/project_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/director_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/director_field_label"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      app:layout_constraintTop_toBottomOf="@id/project_name"
      app:layout_constraintLeft_toLeftOf="parent" >
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
  </com.google.android.material.textfield.TextInputLayout>


  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/cinematographer_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/cinematographer_dp_field_label"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      app:layout_constraintTop_toBottomOf="@id/director_name"
      app:layout_constraintLeft_toLeftOf="parent" >
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/production_date"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/production_date_field_label"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      app:layout_constraintTop_toBottomOf="@id/cinematographer_name"
      app:layout_constraintLeft_toLeftOf="parent" >
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
  </com.google.android.material.textfield.TextInputLayout>

  <Button
      android:id="@+id/done_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/done_button"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>