<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <TextView
      android:id="@+id/filter_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="visible"
      android:text="@string/name_asc"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintLeft_toLeftOf="parent" />

  <ProgressBar
      android:id="@+id/loading_spinner"
      style="?android:attr/progressBarStyleLarge"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_consraintBottom_toBottomOf="@id/filter_text"
      app:layout_constraintLeft_toLeftOf="parent" />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/projectList_list"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:visibility="gone"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_consraintBottom_toBottomOf="@id/filter_text"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent" />

  <TextView
      android:id="@+id/error_message"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="gone"
      android:text="@string/Basic_error"
      app:layout_constraintTop_toBottomOf="@id/filter_text"
      app:layout_constraintLeft_toLeftOf="parent" />

  <Button
      android:id="@+id/add_project_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/add_project_button"
      app:layout_constraintTop_toBottomOf="@id/projectList_list"
      app:layout_constraintLeft_toLeftOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>